--- a/2020/spaceXGraphQl/package.json
+++ b/2020/spaceXGraphQl/package.json
@@ -31,12 +31,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "recharts": "^1.8.5",
-    "typescript": "~3.7.2"
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "fresh": "echo \"clearing node modules\" && rm -rf node_modules/ && echo \"cleared\" && yarn",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
