--- a/2023/rick_morty_api/web_react/package.json
+++ b/2023/rick_morty_api/web_react/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "citr-v8-project",
-  "version": "8.0.0",
-  "description": "Complete Intro to React v8 project",
+  "name": "rick-morty-api-test-web",
+  "version": "1.0.0",
+  "description": "Rick morty api test web",
   "main": "index.js",
   "scripts": {
     "dev": "vite",
@@ -11,7 +11,7 @@
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
   },
   "keywords": [],
-  "author": "Brian Holt",
+  "author": "Shpadoinkle",
   "license": "ISC",
   "devDependencies": {
     "@vitejs/plugin-react": "2.1.0",
